# slackbot

./: Cargo.toml  Dockerfile  README.md  build-run.sh  run-nats-docker.sh  slackbot.yaml
src/: main.rs  slack.rs
